@@ -1,8 +1,9 @@
 #transfer file
 cat << EOF > batchfile
-cd dist/lib
+cd dist
 lcd ../
 put com.getshop.core/dist/com.thundashop.core.jar
+cd lib
 put com.getshop.messages/dist/com.thundashop.messages.jar
 EOF
 
@@ -13,6 +14,8 @@ rm -rf batchfile
 echo -e "Restarting java!";
 ssh -T naxa@backend.getshop.com << EOF &> /dev/null
 cd dist; 
+kill -9 `ps aux |grep thunda |grep -v "auto" |awk '{print $2}'`
+java -Xmx1024m -XX:MaxPermSize=1024m -cp com.thundashop.core.jar:lib/* com.thundashop.core.databasemanager.AddApplicationsToDatabase;
 ./start.sh
 EOF
 echo -e "Done!";
